fixed spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -325,6 +325,7 @@ span a {
 
 .readings-time{
   font-size: .75rem;
+  margin-bottom: 1.5rem;
 }
 
 .live-tent{
